Name:                din
Version:             0.1
License:             BSD3
License-file:        LICENSE
Author:              Trevor Elliott
Maintainer:          awesomelyawesome@gmail.com
Category:            Sound
Build-type:          Simple
Cabal-version:       >=1.2


Executable din
  Main-is:             Main.hs
  Hs-source-dirs:      src
  Other-modules:       Backend,
                       Backend.Generic123,
                       Filesystem,
                       Player,
                       Storage,
                       Tag,
                       UI,
                       UI.PlaybackStatus
  Build-depends:       base                 >= 4         && < 5,
                       bytestring           >= 0.9.2     && < 0.10,
                       containers           >= 0.4       && < 0.5,
                       filepath             >= 1.2       && < 1.4,
                       process              >= 1.1       && < 1.2,
                       template-haskell     >= 2.5       && < 2.8,
                       mtl                  >= 2.0.1.0   && < 2.1,
                       persistent           >= 0.8.0.2   && < 0.9,
                       persistent-sqlite    >= 0.8.0     && < 0.9,
                       persistent-template  >= 0.8.2     && < 0.9,
                       text                 >= 0.11.1    && < 0.12,
                       vty                  >= 4.7       && < 4.8,
                       vty-ui               >= 1.4       && < 1.5
  Extra-libraries:     tag_c
  Pkgconfig-depends:   taglib_c
