Name:                mp
Version:             0.1
License:             BSD3
License-file:        LICENSE
Author:              Trevor Elliott
Maintainer:          awesomelyawesome@gmail.com
Category:            Sound
Build-type:          Simple
Cabal-version:       >=1.2


Executable mp
  Main-is:             Main.hs
  Hs-source-dirs:      src
  Other-modules:       Backend,
                       Backend.Generic123,
                       Filesystem,
                       Player
  Build-depends:       base       >= 4.3.0.0 && < 5.0.0.0,
                       containers >= 0.4.0.0 && < 0.5.0.0,
                       filepath   >= 1.2.0.0 && < 1.3.0.0,
                       process    >= 1.0.0.0 && < 1.1.0.0
